src/site/resources/css/site.css
h1 {
  text-transform: capitalize;
  font-size: x-large;
}

h2 {
  text-transform: capitalize;
}

h3 {
  text-transform: capitalize;
}

h4 {
  text-transform: capitalize;
}

.tip {
  margin-left : 5%;
  margin-right : 5%;
  padding-left: 2%;
  padding-right: 2%;
  background-color: #c0c0c0;
  color: #000000;
  border: ridge;
}

#bannerLeft img {
  float:left;
  position: relative;
  top: 0;
  left: 40px;

}

#banner {
  border-bottom: 1px solid #fff;
  background: url("../images/header-background.png") repeat-x scroll 0 0 transparent;
}

.dl-link {
  position: relative;
  float: right;
}

h2:hover .anchor, h3:hover .anchor, p[id^="Example"]:hover .anchor {
  visibility: visible;
}

.anchor {
  visibility: hidden;
  display: inline-block;
}

.source {
  white-space: nowrap;
  padding: 0;
  overflow-x: auto;
}

.source > pre {
  margin: 0;
  padding: 12px;
  width: max-content;
}

.wrap-content pre {
  white-space: pre-line !important;
  word-wrap: break-word !important;
}

section {
  position: relative;
}

div, p, td, table.bodyTable td, th, table.bodyTable th, li, pre, #breadcrumbs span, .sidebar-nav h5,
.sidebar-nav li, #footer, div.tip b, .releaseDate, .breadcrumb {
  font-size: 15px;
}

.sidebar-nav li.expanded, .sidebar-nav li.collapsed {
  background-size: 7px;
}

.sidebar-nav {
  padding: 8px 4px 0 12px;
}

.prettyprint {
  padding: 1em !important;
}

.prettyprint code {
  font-size: 15px;
}

.externalLink {
  background: url("../images/external.png") right center no-repeat !important;
}

.breadcrumb {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

#bodyColumn h2, h2 {
  font-size: 24px;
}

.sidebar-nav li {
  margin: 3px 0;
}

#bodyColumn {
  margin-left: 297px;
}

#leftColumn {
  min-width: 250px;
  width: fit-content;
}

.releaseDate {
  position: absolute;
  top: 2px;
  right: 6px;
}

.wrapper {
  overflow-y: auto;
}

span.wrapper.block {
  display: block;
}

span.wrapper.inline {
  display: inline;
}

.pull-right > a {
  position: fixed;
  bottom: 40px;
  right: 30px;
  background-color: #007bff;
  color: #fff;
  padding: 10px 15px;
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: background-color 0.3s ease, transform 0.2s ease;
  z-index: 10;
  cursor: pointer;
  font-family: "Gill Sans", sans-serif;
}

.pull-right > a:hover {
  background-color: #0665ca;
  transform: translateY(-2px);
}

.poweredBy {
  display: block;
}

#hamburger {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  width: 20px;
  height: 20px;
  cursor: pointer;
  margin-top: 5px;
  margin-bottom: 5px;
}

#hamburger span {
  display: block;
  width: 100%;
  height: 2px;
  background-color: #333;
  border-radius: 2px;
}

#hamburger.openMenu span:nth-child(1) {
  transform: rotate(45deg);
  position: absolute;
  width: 3%;
}

#hamburger.openMenu span:nth-child(2) {
  opacity: 0;
}

#hamburger.openMenu span:nth-child(3) {
  transform: rotate(-45deg);
  position: absolute;
  width: 3%;
}

#hamburger span {
  transition: transform 0.3s ease, opacity 0.3s ease;
}

@media screen and (max-width: 823px) {
  #leftColumn {
    float: none;
    width: auto;
    margin: 1.5em;
    position: sticky;
    z-index: 1;
    box-shadow: rgba(0, 0, 0, 0.7) 0 5px 10px -3px;
    overflow-y: auto;
    display: none;
  }

  .breadcrumb {
    padding: 5px;
    padding-right: 10px;
    display: flex;
    align-items: center;
    background-color: transparent;
    gap: 7px;
  }

  #breadcrumbs {
    position: sticky;
    border-radius: 3px;
    top: 0;
    z-index: 10;
    box-shadow: 0 5px 10px -3px rgba(0,0,0,0.5);
  }

  #bodyColumn {
    margin: 1.5em;
  }

  #bannerRight {
    display: none;
  }

  .sidebar-nav {
    background: transparent;
    margin-bottom: 0;
    border: none;
    box-shadow: 0 0 0 0;
  }

  p, h1, h2, h3, h4, h5, h6, li {
    word-break: break-word;
  }

  table.bodyTable tr {
    display: block;
    margin-bottom: 1rem;
  }

  table.bodyTable th,
  table.bodyTable td {
    display: block;
    text-align: left;
  }

  section[id="Properties"] .wrapper .bodyTable tr td:first-child {
    font-style: italic;
  }
}

